Bug 154751 - FILEOPEN DOCX Strikethrough is not displayed
Summary: FILEOPEN DOCX Strikethrough is not displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.6.0
Keywords: filter:docx
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2023-04-11 06:43 UTC by siyi
Modified: 2023-06-02 10:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Deletion lines are not displayed properly (10.98 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-04-11 06:44 UTC, siyi
Details
Sample file with first line modified (8.81 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-04-11 15:19 UTC, m_a_riosv
Details
PDF exported from office.com (168.81 KB, application/pdf)
2023-04-14 14:22 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description siyi 2023-04-11 06:43:12 UTC
Description:
"Asdasdads" contains stripper lines, but does not display properly

Actual Results:
"Asdasdads" contains stripper lines, but does not display properly

Expected Results:
Deleted lines are displayed normally


Reproducible: Always


User Profile Reset: Yes

Additional Info:
none
Comment 1 siyi 2023-04-11 06:44:05 UTC
Created attachment 186572 [details]
Deletion lines are not displayed properly
Comment 2 m_a_riosv 2023-04-11 15:19:02 UTC
Created attachment 186583 [details]
Sample file with first line modified

Works for me with 
Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 53bb9681a964705cf672590721dbc85eb4d0c3a2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

Please test with a clean profile, Menu/Help/Restart in Safe Mode
And also, can you paste the information in Menu/Help/About LibreOffice, there is an icon to copy.
Comment 3 Buovjaga 2023-04-14 14:22:44 UTC
Created attachment 186666 [details]
PDF exported from office.com

In office.com Asdasdads on the second page has strikethrough unlike LibreOffice
Comment 4 Buovjaga 2023-04-14 14:28:22 UTC
Tested with 6.4, 5.4, 4.3, 3.5.

In the document.xml I see

<w:r>
  <w:rPr>
    <w:rFonts w:hint="eastAsia" w:ascii="等线" w:hAnsi="等线" w:eastAsia="等线" w:cs="等线"/>
    <w:b w:val="0"/>
    <w:bCs w:val="0"/>
    <w:strike/>
    <w:dstrike w:val="0"/>
    <w:sz w:val="72"/>
    <w:szCs w:val="144"/>
    <w:lang w:val="en-US" w:eastAsia="zh-CN"/>
  </w:rPr>
  <w:t>Asdasdads</w:t>
</w:r>
Comment 5 Commit Notification 2023-06-02 02:28:25 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e6f4bbefaa4f4f83210970210aa7796aab7cf03

tdf#154751 writerfilter: last enabled strikethrough wins

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.