tdf#154751 writerfilter: last enabled strikethrough wins

The problem is that multiple strikeout character properties can
be defined for DOCX, but it is implemented using a single property
in LO. If the last definition was "not *strike" then all strikeouts
were disabled.

Instead, if any strikeout is enabled, the last one overrides the others,
but cancelling doesn't negate a previously defined strikeout.

make CppunitTest_sw_ooxmlexport18 \
    CPPUNIT_TEST_NAME=testTdf154751_dualStrikethrough

Change-Id: Iaf17380061a0b37db4bc7a87c703e81f0181bcc6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152514
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>